--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vicous Cycles</title>
     <h1>Vicous Cycles</h1>
+    <style>
+
+        body
+        {
+            background-color:#E7FBFB 
+        }
+
+        h1 
+        {
+          font-size: 4em;
+          text-align: center;
+          color: #010B5B ;
+        }
+
+    </style>
 </head>
 <body>
     
